@@ -98,6 +98,11 @@ Note: This is a change to what is displayed and the entries are not updated to p
 
 <table>
 <tbody>
+
+<tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3521158);return false;">3521158</a></td>
+<td>Paste into the Notes field (Add or Edit entry) is now always in plain text.</td>
+</tr>
 <tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3518732);return false;">3518732</a></td>
 <td>Custom special symbol set now handled correctly in Generate Password dialog box.</td>
